--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="light_black">#6A6A6A</color>
+    <color name="white">#F8F8F8</color>
+    <color name="dark_white">#F6F6F6</color>
     <color name="red">#BC4343</color>
 </resources>
