--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/addView"
+            android:id="@+id/add_alarmm"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_marginTop="16dp"
